1.0.5:
* create gmtk-parameter heatmap from params.params or input.master

1.0.4:
* init